Update JDK to 17. Switch from javax.jms.* to jakarta.jms.* namespace. Update testing libraries and maven plugins.