@@ -14,31 +14,25 @@
  */
 package com.amazon.sqs.javamessaging.message;
 
-import static com.amazon.sqs.javamessaging.SQSMessagingClientConstants.APPROXIMATE_RECEIVE_COUNT;
-import static com.amazon.sqs.javamessaging.SQSMessagingClientConstants.JMSX_DELIVERY_COUNT;
-import static org.junit.Assert.*;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.spy;
-import static org.mockito.Mockito.when;
-
-import javax.jms.JMSException;
-
 import com.amazon.sqs.javamessaging.SQSMessagingClientConstants;
 import com.amazon.sqs.javamessaging.SQSSession;
 import com.amazon.sqs.javamessaging.acknowledge.Acknowledger;
-import com.amazon.sqs.javamessaging.message.SQSMessage;
-import org.junit.Before;
-import org.junit.Test;
-
-import javax.jms.Message;
-import javax.jms.MessageFormatException;
-import javax.jms.MessageNotWriteableException;
-
-import junit.framework.Assert;
+import jakarta.jms.JMSException;
+import jakarta.jms.Message;
+import jakarta.jms.MessageFormatException;
+import jakarta.jms.MessageNotWriteableException;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import software.amazon.awssdk.services.sqs.model.MessageAttributeValue;
 import software.amazon.awssdk.services.sqs.model.MessageSystemAttributeName;
 
 import java.util.*;
+
+import static com.amazon.sqs.javamessaging.SQSMessagingClientConstants.APPROXIMATE_RECEIVE_COUNT;
+import static com.amazon.sqs.javamessaging.SQSMessagingClientConstants.JMSX_DELIVERY_COUNT;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 /**
  * Test the SQSMessageTest class
@@ -57,7 +51,7 @@ public class SQSMessageTest {
     final String myCustomString = "myCustomString";
     final String myNumber = "myNumber";
 
-    @Before
+    @BeforeEach
     public void setup() {
         mockSQSSession = mock(SQSSession.class);
     }
@@ -81,53 +75,53 @@ public class SQSMessageTest {
         message.setStringProperty("myString", "StringValue");
         message.setStringProperty("myNumber", "500");
 
-        Assert.assertTrue(message.propertyExists("myTrueBoolean"));
-        Assert.assertEquals(message.getObjectProperty("myTrueBoolean"), true);
-        Assert.assertEquals(message.getBooleanProperty("myTrueBoolean"), true);
-        
-        Assert.assertTrue(message.propertyExists("myFalseBoolean"));
-        Assert.assertEquals(message.getObjectProperty("myFalseBoolean"), false);
-        Assert.assertEquals(message.getBooleanProperty("myFalseBoolean"), false);
-        
-        Assert.assertTrue(message.propertyExists("myInteger"));
-        Assert.assertEquals(message.getObjectProperty("myInteger"), 100);
-        Assert.assertEquals(message.getIntProperty("myInteger"), 100);
-        
-        Assert.assertTrue(message.propertyExists("myDouble"));
-        Assert.assertEquals(message.getObjectProperty("myDouble"), 2.1768);
-        Assert.assertEquals(message.getDoubleProperty("myDouble"), 2.1768);
-        
-        Assert.assertTrue(message.propertyExists("myFloat"));
-        Assert.assertEquals(message.getObjectProperty("myFloat"), 3.1457f);
-        Assert.assertEquals(message.getFloatProperty("myFloat"), 3.1457f);
-        
-        Assert.assertTrue(message.propertyExists("myLong"));
-        Assert.assertEquals(message.getObjectProperty("myLong"), 1290772974281L);
-        Assert.assertEquals(message.getLongProperty("myLong"), 1290772974281L);
-        
-        Assert.assertTrue(message.propertyExists("myShort"));
-        Assert.assertEquals(message.getObjectProperty("myShort"), (short) 123);
-        Assert.assertEquals(message.getShortProperty("myShort"), (short) 123);
-        
-        Assert.assertTrue(message.propertyExists("myByteProperty"));
-        Assert.assertEquals(message.getObjectProperty("myByteProperty"), (byte) 'a');
-        Assert.assertEquals(message.getByteProperty("myByteProperty"), (byte) 'a');
-        
-        Assert.assertTrue(message.propertyExists("myString"));
-        Assert.assertEquals(message.getObjectProperty("myString"), "StringValue");
-        Assert.assertEquals(message.getStringProperty("myString"), "StringValue");
+        assertTrue(message.propertyExists("myTrueBoolean"));
+        assertEquals(message.getObjectProperty("myTrueBoolean"), true);
+        assertTrue(message.getBooleanProperty("myTrueBoolean"));
 
-        Assert.assertTrue(message.propertyExists("myNumber"));
-        Assert.assertEquals(message.getObjectProperty("myNumber"), "500");
-        Assert.assertEquals(message.getStringProperty("myNumber"), "500");
-        Assert.assertEquals(message.getLongProperty("myNumber"), 500L);
-        Assert.assertEquals(message.getFloatProperty("myNumber"), 500f);
-        Assert.assertEquals(message.getShortProperty("myNumber"), (short) 500);
-        Assert.assertEquals(message.getDoubleProperty("myNumber"), 500d);
-        Assert.assertEquals(message.getIntProperty("myNumber"), 500);
+        assertTrue(message.propertyExists("myFalseBoolean"));
+        assertEquals(message.getObjectProperty("myFalseBoolean"), false);
+        assertFalse(message.getBooleanProperty("myFalseBoolean"));
+
+        assertTrue(message.propertyExists("myInteger"));
+        assertEquals(message.getObjectProperty("myInteger"), 100);
+        assertEquals(message.getIntProperty("myInteger"), 100);
+
+        assertTrue(message.propertyExists("myDouble"));
+        assertEquals(message.getObjectProperty("myDouble"), 2.1768);
+        assertEquals(message.getDoubleProperty("myDouble"), 2.1768, 0.0);
+
+        assertTrue(message.propertyExists("myFloat"));
+        assertEquals(message.getObjectProperty("myFloat"), 3.1457f);
+        assertEquals(message.getFloatProperty("myFloat"), 3.1457f, 0.0);
+
+        assertTrue(message.propertyExists("myLong"));
+        assertEquals(message.getObjectProperty("myLong"), 1290772974281L);
+        assertEquals(message.getLongProperty("myLong"), 1290772974281L);
+
+        assertTrue(message.propertyExists("myShort"));
+        assertEquals(message.getObjectProperty("myShort"), (short) 123);
+        assertEquals(message.getShortProperty("myShort"), (short) 123);
+
+        assertTrue(message.propertyExists("myByteProperty"));
+        assertEquals(message.getObjectProperty("myByteProperty"), (byte) 'a');
+        assertEquals(message.getByteProperty("myByteProperty"), (byte) 'a');
+
+        assertTrue(message.propertyExists("myString"));
+        assertEquals(message.getObjectProperty("myString"), "StringValue");
+        assertEquals(message.getStringProperty("myString"), "StringValue");
+
+        assertTrue(message.propertyExists("myNumber"));
+        assertEquals(message.getObjectProperty("myNumber"), "500");
+        assertEquals(message.getStringProperty("myNumber"), "500");
+        assertEquals(message.getLongProperty("myNumber"), 500L);
+        assertEquals(message.getFloatProperty("myNumber"), 500f, 0.0);
+        assertEquals(message.getShortProperty("myNumber"), (short) 500);
+        assertEquals(message.getDoubleProperty("myNumber"), 500d, 0.0);
+        assertEquals(message.getIntProperty("myNumber"), 500);
 
         // Validate property names
-        Set<String> propertyNamesSet = new HashSet<String>(Arrays.asList(
+        Set<String> propertyNamesSet = Set.of(
                 "myTrueBoolean",
                 "myFalseBoolean",
                 "myInteger",
@@ -137,26 +131,26 @@ public class SQSMessageTest {
                 "myShort",
                 "myByteProperty",
                 "myNumber",
-                "myString"));
+                "myString");
 
-        Enumeration<String > propertyNames = message.getPropertyNames();
+        Enumeration<String> propertyNames = message.getPropertyNames();
         int counter = 0;
         while (propertyNames.hasMoreElements()) {
             assertTrue(propertyNamesSet.contains(propertyNames.nextElement()));
             counter++;
         }
         assertEquals(propertyNamesSet.size(), counter);
-        
+
         message.clearProperties();
-        Assert.assertFalse(message.propertyExists("myTrueBoolean"));
-        Assert.assertFalse(message.propertyExists("myInteger"));
-        Assert.assertFalse(message.propertyExists("myDouble"));
-        Assert.assertFalse(message.propertyExists("myFloat"));
-        Assert.assertFalse(message.propertyExists("myLong"));
-        Assert.assertFalse(message.propertyExists("myShort"));
-        Assert.assertFalse(message.propertyExists("myByteProperty"));
-        Assert.assertFalse(message.propertyExists("myString"));
-        Assert.assertFalse(message.propertyExists("myNumber"));
+        assertFalse(message.propertyExists("myTrueBoolean"));
+        assertFalse(message.propertyExists("myInteger"));
+        assertFalse(message.propertyExists("myDouble"));
+        assertFalse(message.propertyExists("myFloat"));
+        assertFalse(message.propertyExists("myLong"));
+        assertFalse(message.propertyExists("myShort"));
+        assertFalse(message.propertyExists("myByteProperty"));
+        assertFalse(message.propertyExists("myString"));
+        assertFalse(message.propertyExists("myNumber"));
 
         propertyNames = message.getPropertyNames();
         assertFalse(propertyNames.hasMoreElements());
@@ -167,28 +161,20 @@ public class SQSMessageTest {
      */
     @Test
     public void testCheckPropertyWritePermissions() throws JMSException {
-        SQSMessage msg =  new SQSMessage();
-
-
+        SQSMessage msg = new SQSMessage();
         msg.checkBodyWritePermissions();
-
         msg.setBodyWritePermissions(false);
 
-        try {
-            msg.checkBodyWritePermissions();
-        } catch (MessageNotWriteableException exception) {
-            assertEquals("Message body is not writable", exception.getMessage());
-        }
+        assertThatThrownBy(msg::checkBodyWritePermissions)
+                .isInstanceOf(MessageNotWriteableException.class)
+                .hasMessage("Message body is not writable");
 
         msg.checkPropertyWritePermissions();
-
         msg.setWritePermissionsForProperties(false);
 
-        try {
-            msg.checkPropertyWritePermissions();
-        } catch (MessageNotWriteableException exception) {
-            assertEquals("Message properties are not writable", exception.getMessage());
-        }
+        assertThatThrownBy(msg::checkPropertyWritePermissions)
+                .isInstanceOf(MessageNotWriteableException.class)
+                .hasMessage("Message properties are not writable");
     }
 
     /**
@@ -196,33 +182,24 @@ public class SQSMessageTest {
      */
     @Test
     public void testGetPrimitiveProperty() throws JMSException {
-        SQSMessage msg =  spy(new SQSMessage());
-        when(msg.getObjectProperty("testProperty"))
-                .thenReturn(null);
+        SQSMessage msg = spy(new SQSMessage());
+        when(msg.getObjectProperty("testProperty")).thenReturn(null);
 
-        try {
-            msg.getPrimitiveProperty(null, String.class);
-        } catch (NullPointerException npe) {
-            assertEquals("Property name is null", npe.getMessage());
-        }
+        assertThatThrownBy(() -> msg.getPrimitiveProperty(null, String.class))
+                .isInstanceOf(NullPointerException.class)
+                .hasMessage("Property name is null");
 
-        try {
-            msg.getPrimitiveProperty("testProperty", List.class);
-        } catch (NumberFormatException exp) {
-            assertEquals("Value of property with name testProperty is null.", exp.getMessage());
-        }
+        assertThatThrownBy(() -> msg.getPrimitiveProperty("testProperty", List.class))
+                .isInstanceOf(NumberFormatException.class)
+                .hasMessage("Value of property with name testProperty is null.");
 
-        try {
-            msg.getPrimitiveProperty("testProperty", Double.class);
-        } catch (NullPointerException exp) {
-            assertEquals("Value of property with name testProperty is null.", exp.getMessage());
-        }
+        assertThatThrownBy(() -> msg.getPrimitiveProperty("testProperty", Double.class))
+                .isInstanceOf(NullPointerException.class)
+                .hasMessage("Value of property with name testProperty is null.");
 
-        try {
-            msg.getPrimitiveProperty("testProperty", Float.class);
-        } catch (NullPointerException exp) {
-            assertEquals("Value of property with name testProperty is null.", exp.getMessage());
-        }
+        assertThatThrownBy(() -> msg.getPrimitiveProperty("testProperty", Float.class))
+                .isInstanceOf(NullPointerException.class)
+                .hasMessage("Value of property with name testProperty is null.");
 
         assertFalse(msg.getPrimitiveProperty("testProperty", Boolean.class));
         assertNull(msg.getPrimitiveProperty("testProperty", String.class));
@@ -233,45 +210,33 @@ public class SQSMessageTest {
      */
     @Test
     public void testSetObjectProperty() throws JMSException {
-        SQSMessage msg =  spy(new SQSMessage());
+        SQSMessage msg = spy(new SQSMessage());
 
-        try {
-            msg.setObjectProperty(null, 1);
-        } catch (IllegalArgumentException exception) {
-            assertEquals("Property name can not be null or empty.", exception.getMessage());
-        }
+        assertThatThrownBy(() -> msg.setObjectProperty(null, 1))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Property name can not be null or empty.");
 
-        try {
-            msg.setObjectProperty("", 1);
-        } catch (IllegalArgumentException exception) {
-            assertEquals("Property name can not be null or empty.", exception.getMessage());
-        }
+        assertThatThrownBy(() -> msg.setObjectProperty("", 1))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Property name can not be null or empty.");
 
-        try {
-            msg.setObjectProperty("Property", null);
-        } catch (IllegalArgumentException exception) {
-            assertEquals("Property value can not be null or empty.", exception.getMessage());
-        }
+        assertThatThrownBy(() -> msg.setObjectProperty("Property", null))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Property value can not be null or empty.");
 
-        try {
-            msg.setObjectProperty("Property", "");
-        } catch (IllegalArgumentException exception) {
-            assertEquals("Property value can not be null or empty.", exception.getMessage());
-        }
+        assertThatThrownBy(() -> msg.setObjectProperty("Property", ""))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Property value can not be null or empty.");
 
-        try {
-            msg.setObjectProperty("Property", new HashSet<String>());
-        } catch (MessageFormatException exception) {
-            assertEquals("Value of property with name Property has incorrect type java.util.HashSet.",
-                         exception.getMessage());
-        }
+        assertThatThrownBy(() -> msg.setObjectProperty("Property", new HashSet<>()))
+                .isInstanceOf(MessageFormatException.class)
+                .hasMessage("Value of property with name Property has incorrect type java.util.HashSet.");
 
         msg.setWritePermissionsForProperties(false);
-        try {
-            msg.setObjectProperty("Property", "1");
-        } catch (MessageNotWriteableException exception) {
-            assertEquals("Message properties are not writable", exception.getMessage());
-        }
+
+        assertThatThrownBy(() -> msg.setObjectProperty("Property", "1"))
+                .isInstanceOf(MessageNotWriteableException.class)
+                .hasMessage("Message properties are not writable");
 
         msg.setWritePermissionsForProperties(true);
         msg.setObjectProperty("Property", "1");
@@ -284,68 +249,67 @@ public class SQSMessageTest {
      */
     @Test
     public void testSQSMessageAttributeToProperty() throws JMSException {
-
         Acknowledger ack = mock(Acknowledger.class);
 
         Map<MessageSystemAttributeName, String> systemAttributes = new HashMap<>();
         systemAttributes.put(MessageSystemAttributeName.fromValue(APPROXIMATE_RECEIVE_COUNT), "100");
 
-        Map<String, MessageAttributeValue> messageAttributes = new HashMap<String, MessageAttributeValue>();
+        Map<String, MessageAttributeValue> messageAttributes = new HashMap<>();
 
         messageAttributes.put(myTrueBoolean, MessageAttributeValue.builder()
-                                                    .dataType(SQSMessagingClientConstants.BOOLEAN)
-                                                    .stringValue("1")
-                                                    .build());
+                .dataType(SQSMessagingClientConstants.BOOLEAN)
+                .stringValue("1")
+                .build());
 
         messageAttributes.put(myFalseBoolean, MessageAttributeValue.builder()
-                                                    .dataType(SQSMessagingClientConstants.BOOLEAN)
-                                                    .stringValue("0")
-                                                    .build());
+                .dataType(SQSMessagingClientConstants.BOOLEAN)
+                .stringValue("0")
+                .build());
 
         messageAttributes.put(myInteger, MessageAttributeValue.builder()
-                                                    .dataType(SQSMessagingClientConstants.INT)
-                                                    .stringValue("100")
-                                                    .build());
+                .dataType(SQSMessagingClientConstants.INT)
+                .stringValue("100")
+                .build());
 
         messageAttributes.put(myDouble, MessageAttributeValue.builder()
-                                                    .dataType(SQSMessagingClientConstants.DOUBLE)
-                                                    .stringValue("2.1768")
-                                                    .build());
+                .dataType(SQSMessagingClientConstants.DOUBLE)
+                .stringValue("2.1768")
+                .build());
 
         messageAttributes.put(myFloat, MessageAttributeValue.builder()
-                                                    .dataType(SQSMessagingClientConstants.FLOAT)
-                                                    .stringValue("3.1457")
-                                                    .build());
+                .dataType(SQSMessagingClientConstants.FLOAT)
+                .stringValue("3.1457")
+                .build());
 
         messageAttributes.put(myLong, MessageAttributeValue.builder()
-                                                    .dataType(SQSMessagingClientConstants.LONG)
-                                                    .stringValue("1290772974281")
-                                                    .build());
+                .dataType(SQSMessagingClientConstants.LONG)
+                .stringValue("1290772974281")
+                .build());
 
         messageAttributes.put(myShort, MessageAttributeValue.builder()
-                                                    .dataType(SQSMessagingClientConstants.SHORT)
-                                                    .stringValue("123")
-                                                    .build());
+                .dataType(SQSMessagingClientConstants.SHORT)
+                .stringValue("123")
+                .build());
 
         messageAttributes.put(myByte, MessageAttributeValue.builder()
-                                                    .dataType(SQSMessagingClientConstants.BYTE)
-                                                    .stringValue("1")
-                                                    .build());
+                .dataType(SQSMessagingClientConstants.BYTE)
+                .stringValue("1")
+                .build());
 
         messageAttributes.put(myString, MessageAttributeValue.builder()
-                                                    .dataType(SQSMessagingClientConstants.STRING)
-                                                    .stringValue("StringValue")
-                                                    .build());
+                .dataType(SQSMessagingClientConstants.STRING)
+                .stringValue("StringValue")
+                .build());
 
         messageAttributes.put(myCustomString, MessageAttributeValue.builder()
-                                                    .dataType(SQSMessagingClientConstants.NUMBER + ".custom")
-                                                    .stringValue("['one', 'two']")
-                                                    .build());
+                .dataType(SQSMessagingClientConstants.NUMBER + ".custom")
+                .stringValue("['one', 'two']")
+                .build());
 
         messageAttributes.put(myNumber, MessageAttributeValue.builder()
-                                                    .dataType(SQSMessagingClientConstants.NUMBER)
-                                                    .stringValue("500")
-                                                    .build());
+                .dataType(SQSMessagingClientConstants.NUMBER)
+                .stringValue("500")
+                .build());
 
         software.amazon.awssdk.services.sqs.model.Message sqsMessage = software.amazon.awssdk.services.sqs.model.Message.builder()
                 .messageAttributes(messageAttributes)
@@ -356,58 +320,58 @@ public class SQSMessageTest {
 
         SQSMessage message = new SQSMessage(ack, "QueueUrl", sqsMessage);
 
-        Assert.assertTrue(message.propertyExists(myTrueBoolean));
-        Assert.assertEquals(message.getObjectProperty(myTrueBoolean), true);
-        Assert.assertEquals(message.getBooleanProperty(myTrueBoolean), true);
+        assertTrue(message.propertyExists(myTrueBoolean));
+        assertEquals(message.getObjectProperty(myTrueBoolean), true);
+        assertTrue(message.getBooleanProperty(myTrueBoolean));
 
-        Assert.assertTrue(message.propertyExists(myFalseBoolean));
-        Assert.assertEquals(message.getObjectProperty(myFalseBoolean), false);
-        Assert.assertEquals(message.getBooleanProperty(myFalseBoolean), false);
+        assertTrue(message.propertyExists(myFalseBoolean));
+        assertEquals(message.getObjectProperty(myFalseBoolean), false);
+        assertFalse(message.getBooleanProperty(myFalseBoolean));
 
-        Assert.assertTrue(message.propertyExists(myInteger));
-        Assert.assertEquals(message.getObjectProperty(myInteger), 100);
-        Assert.assertEquals(message.getIntProperty(myInteger), 100);
+        assertTrue(message.propertyExists(myInteger));
+        assertEquals(message.getObjectProperty(myInteger), 100);
+        assertEquals(message.getIntProperty(myInteger), 100);
 
-        Assert.assertTrue(message.propertyExists(myDouble));
-        Assert.assertEquals(message.getObjectProperty(myDouble), 2.1768);
-        Assert.assertEquals(message.getDoubleProperty(myDouble), 2.1768);
+        assertTrue(message.propertyExists(myDouble));
+        assertEquals(message.getObjectProperty(myDouble), 2.1768);
+        assertEquals(message.getDoubleProperty(myDouble), 2.1768, 0.0);
 
-        Assert.assertTrue(message.propertyExists(myFloat));
-        Assert.assertEquals(message.getObjectProperty(myFloat), 3.1457f);
-        Assert.assertEquals(message.getFloatProperty(myFloat), 3.1457f);
+        assertTrue(message.propertyExists(myFloat));
+        assertEquals(message.getObjectProperty(myFloat), 3.1457f);
+        assertEquals(message.getFloatProperty(myFloat), 3.1457f, 0.0);
 
-        Assert.assertTrue(message.propertyExists(myLong));
-        Assert.assertEquals(message.getObjectProperty(myLong), 1290772974281L);
-        Assert.assertEquals(message.getLongProperty(myLong), 1290772974281L);
+        assertTrue(message.propertyExists(myLong));
+        assertEquals(message.getObjectProperty(myLong), 1290772974281L);
+        assertEquals(message.getLongProperty(myLong), 1290772974281L);
 
-        Assert.assertTrue(message.propertyExists(myShort));
-        Assert.assertEquals(message.getObjectProperty(myShort), (short) 123);
-        Assert.assertEquals(message.getShortProperty(myShort), (short) 123);
+        assertTrue(message.propertyExists(myShort));
+        assertEquals(message.getObjectProperty(myShort), (short) 123);
+        assertEquals(message.getShortProperty(myShort), (short) 123);
 
-        Assert.assertTrue(message.propertyExists(myByte));
-        Assert.assertEquals(message.getObjectProperty(myByte), (byte) 1);
-        Assert.assertEquals(message.getByteProperty(myByte), (byte) 1);
+        assertTrue(message.propertyExists(myByte));
+        assertEquals(message.getObjectProperty(myByte), (byte) 1);
+        assertEquals(message.getByteProperty(myByte), (byte) 1);
 
-        Assert.assertTrue(message.propertyExists(myString));
-        Assert.assertEquals(message.getObjectProperty(myString), "StringValue");
-        Assert.assertEquals(message.getStringProperty(myString), "StringValue");
+        assertTrue(message.propertyExists(myString));
+        assertEquals(message.getObjectProperty(myString), "StringValue");
+        assertEquals(message.getStringProperty(myString), "StringValue");
 
-        Assert.assertTrue(message.propertyExists(myCustomString));
-        Assert.assertEquals(message.getObjectProperty(myCustomString), "['one', 'two']");
-        Assert.assertEquals(message.getStringProperty(myCustomString), "['one', 'two']");
+        assertTrue(message.propertyExists(myCustomString));
+        assertEquals(message.getObjectProperty(myCustomString), "['one', 'two']");
+        assertEquals(message.getStringProperty(myCustomString), "['one', 'two']");
 
-        Assert.assertTrue(message.propertyExists(myNumber));
-        Assert.assertEquals(message.getObjectProperty(myNumber), "500");
-        Assert.assertEquals(message.getStringProperty(myNumber), "500");
-        Assert.assertEquals(message.getIntProperty(myNumber), 500);
-        Assert.assertEquals(message.getShortProperty(myNumber), (short) 500);
-        Assert.assertEquals(message.getLongProperty(myNumber), 500l);
-        Assert.assertEquals(message.getFloatProperty(myNumber), 500f);
-        Assert.assertEquals(message.getDoubleProperty(myNumber), 500d);
+        assertTrue(message.propertyExists(myNumber));
+        assertEquals(message.getObjectProperty(myNumber), "500");
+        assertEquals(message.getStringProperty(myNumber), "500");
+        assertEquals(message.getIntProperty(myNumber), 500);
+        assertEquals(message.getShortProperty(myNumber), (short) 500);
+        assertEquals(message.getLongProperty(myNumber), 500L);
+        assertEquals(message.getFloatProperty(myNumber), 500f, 0.0);
+        assertEquals(message.getDoubleProperty(myNumber), 500d, 0.0);
 
 
         // Validate property names
-        Set<String> propertyNamesSet = new HashSet<String>(Arrays.asList(
+        Set<String> propertyNamesSet = Set.of(
                 myTrueBoolean,
                 myFalseBoolean,
                 myInteger,
@@ -419,9 +383,9 @@ public class SQSMessageTest {
                 myString,
                 myCustomString,
                 myNumber,
-                JMSX_DELIVERY_COUNT));
+                JMSX_DELIVERY_COUNT);
 
-        Enumeration<String > propertyNames = message.getPropertyNames();
+        Enumeration<String> propertyNames = message.getPropertyNames();
         int counter = 0;
         while (propertyNames.hasMoreElements()) {
             assertTrue(propertyNamesSet.contains(propertyNames.nextElement()));
@@ -430,15 +394,15 @@ public class SQSMessageTest {
         assertEquals(propertyNamesSet.size(), counter);
 
         message.clearProperties();
-        Assert.assertFalse(message.propertyExists("myTrueBoolean"));
-        Assert.assertFalse(message.propertyExists("myInteger"));
-        Assert.assertFalse(message.propertyExists("myDouble"));
-        Assert.assertFalse(message.propertyExists("myFloat"));
-        Assert.assertFalse(message.propertyExists("myLong"));
-        Assert.assertFalse(message.propertyExists("myShort"));
-        Assert.assertFalse(message.propertyExists("myByteProperty"));
-        Assert.assertFalse(message.propertyExists("myString"));
-        Assert.assertFalse(message.propertyExists("myNumber"));
+        assertFalse(message.propertyExists("myTrueBoolean"));
+        assertFalse(message.propertyExists("myInteger"));
+        assertFalse(message.propertyExists("myDouble"));
+        assertFalse(message.propertyExists("myFloat"));
+        assertFalse(message.propertyExists("myLong"));
+        assertFalse(message.propertyExists("myShort"));
+        assertFalse(message.propertyExists("myByteProperty"));
+        assertFalse(message.propertyExists("myString"));
+        assertFalse(message.propertyExists("myNumber"));
 
         propertyNames = message.getPropertyNames();
         assertFalse(propertyNames.hasMoreElements());
